[package]
name = "tinympc-rs"
version = "0.1.0"
edition = "2024"
authors = ["Peter Krull"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
nalgebra = { version = "0.34.0", default-features = false, features = ["libm"] }

embassy-time = { path = "../embassy/embassy-time" }
defmt = "1.0.1"
rerun = "0.24.0"

[dev-dependencies]
nalgebra = { version = "0.34.0", features = ["macros"] }
