[package]
name = "tinympc-rs"
version = "0.1.0"
edition = "2024"
authors = ["Peter Krull"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
nalgebra = { version = "0.34.0", default-features = false, features = ["libm"] }

[dev-dependencies]
nalgebra = { version = "0.34.0", features = ["macros"] }
criterion = "0.7.0"
rerun = "0.24.0"

[[bench]]
name = "kinematic_bench"
harness = false